base/Ingress-traefik/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-my-traefik
  namespace: zz
spec:
  ingressClassName: traefik
  rules:
  - host: ingress.my.traefik.cn
    http:
      paths:
      - backend:
          service:
            name: svc-my-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
  - host: ingress.my.traefik.com
    http:
      paths:
      - backend:
          service:
            name: svc-my-nginx
            port:
              number: 80
        path: /
        pathType: Prefix
